--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/index.css">
-</head>
+</head>robot
 <body>
     <section class="shorcut">
     <div class="w">
         <div class="fl"><ul>
             <li>品优购欢迎你!&nbsp;</li>
             <li><a href="#">请登录&nbsp;</a><a href="register.html" class="style_red">欢迎注册</a></li>
-            <li><a href="聊天机器人.html"> 找客服聊天</a> </li>
+            <li><a href="robot.html"> 找客服聊天</a> </li>
         </ul></div>
         <div class="fr"><ul>
             <li><a href="sj.html">点击进入三贱</a></li>
