--- a/robot.html
+++ b/robot.html
@@ -20,7 +20,7 @@
   .left_word img{
     width: 40px;
     height: 40px;
-    border-radius: 15px;
+    border-radius: 15px;r
   }
   .footer img{
     width: 40px;
